Fix status report summary spacing

--- a/sass/components/system/system-status-report.scss
+++ b/sass/components/system/system-status-report.scss
@@ -36,6 +36,11 @@
     }
   }
 
+  details[open] > summary {
+    border: 0;
+    margin-bottom: 0;
+  }
+
   summary::-webkit-details-marker {
     display: none;
   }
